Remember and show import markers for two hours, even if the imported article changes and the imported section no longer exists